k8s/manifests/dictionary/dictionary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dictionary-deployment
  namespace: dictionary-namespace
  labels:
    app: dictionary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dictionary
  template:
    metadata:
      labels:
        app: dictionary
    spec:
      containers:
      - name: dictionary
        image: apinyarr/dictionary:v1.0
        ports:
        - containerPort: 8088
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          tcpSocket:
            port: 8088
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /search?word=yell
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 4
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 254Mi
