k8s/manifests/dictionary/dictionary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dictionary-service
  namespace: dictionary-namespace
spec:
  selector:
    app: dictionary
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
      nodePort: 30088
  type: NodePort
