k8s/manifests/dictionary/dictionary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dictionary-ingress-resource
  namespace: dictionary-namespace
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8088}]'
  labels:
    app: dictionary-ingress
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dictionary-service
                port:
                  number: 8088
